[tool.poetry]
authors = ["Gabriele N. Tornetta <phoenix1987@gmail.com>"]
description = "Python application configuration via the environment"
license = "MIT"
name = "envier"
version = "0.1.0"

[tool.poetry.dependencies]
python = ">=2.7"

[tool.poetry.dev-dependencies]

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.mypy]
files = "envier/*.py"
show_error_codes = true

[tool.black]
exclude = '''
  (
    /(
      \.venv.*
      | \.riot
    )/
  )
'''

[tool.isort]
force_single_line = true
lines_after_imports = 2
force_sort_within_sections = true
known_first_party = "envier"
default_section = "THIRDPARTY"
skip = [".riot", ".eggs", "build"]
skip_glob = [".venv*"]
line_length = 120
