[build-system]
requires = ["setuptools >= 40.6.0", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_scheme = "release-branch-semver"

[tool.mypy]
files = "envier/*.py"
show_error_codes = true
plugins = "envier.mypy"
ignore_missing_imports = true

[tool.black]
exclude = '''
  (
    /(
      \.venv.*
      | \.riot
    )/
  )
'''

[tool.isort]
force_single_line = true
lines_after_imports = 2
force_sort_within_sections = true
known_first_party = "envier"
default_section = "THIRDPARTY"
skip = [".riot", ".eggs", "build"]
skip_glob = [".venv*"]
line_length = 120
